--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="author" content="Xin">
-    <meta name="description" content="Spirit">
+    <meta name="author" content="Ming">
+    <meta name="description" content="Spirit Coffee">
     <meta property="og:title" content="Spirit" />
-    <meta property="og:description" content="喝杯咖啡，讓您平常的一天好過一點" />
+    <meta property="og:description" content="咖啡愛好者" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ankazu.github.io/spirit/#/" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <title>Spirit</title>
+    <title>Spirit Coffee</title>
   </head>
   <body>
     <noscript>
